# usbredir-proto

./: Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
benches/: codec.rs
examples/: testclient.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_filter.rs  fuzz_parser.rs
src/: caps.rs  codec.rs  error.rs  filter.rs  lib.rs  packet.rs  parser.rs  proto.rs  serializer.rs  wire.rs
tests/: interop.rs  proptest_roundtrip.rs
