[package]
name = "usbredir-proto"
version = "0.1.0"
edition = "2021"
description = "Sans-IO Rust implementation of the usbredir binary protocol"
license = "LGPL-2.1-or-later"

[features]
default = ["std"]
std = ["bytes/std", "thiserror/std"]
tracing = ["dep:tracing"]

[dependencies]
bytes = { version = "1", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
bitflags = { version = "2", default-features = false }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
usbredirparser-sys = "0.4"
criterion = "0.5"

[[bench]]
name = "codec"
harness = false
