[package]
name = "usbredir-proto"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Sans-IO Rust implementation of the usbredir binary protocol"
license = "LGPL-2.1-or-later"

[features]
default = ["std"]
std = ["bytes/std", "thiserror/std"]
tracing = ["dep:tracing"]
tokio = ["dep:tokio-util", "std"]

[dependencies]
bytes = { version = "1", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
bitflags = { version = "2", default-features = false }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

[dev-dependencies]
usbredirparser-sys = "0.4"
criterion = "0.5"
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "io-std", "macros", "time"] }
futures = "0.3"

[[example]]
name = "testclient"
required-features = ["tokio"]

[[bench]]
name = "codec"
harness = false
